[Add] update disbursement integration, [Fix] some layout issues

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -116,4 +116,7 @@ $font-weight-title: 800;
     display: flex;
     justify-content: center;
   }
+  .logo-panel-admin{
+    display: none;
+  }
 }
